--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <h1>About</h1>
-
+  <nav id="navigation">
+    <ul>
+      <li><a href="../">Home</a></li>
+      <li><a href="../resume/">Resume</a></li>
+      <li><a href="">About</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
