--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
   <h1>Hello, World!</h1>
+  <nav id="navigation">
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="resume/">Resume</a></li>
+      <li><a href="about/">About</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
