--- a/resume/index.html
+++ b/resume/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <h1>Resume</h1>
+  <nav id="navigation">
+    <ul>
+      <li><a href="../">Home</a></li>
+      <li><a href="">Resume</a></li>
+      <li><a href="../about/">About</a></li>
+    </ul>
+  </nav>
 
 </body>
 </html>
