Add heading semantics and typographic grid

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="../assets/css/screen.css" />
 </head>
 <body id="content">
-  <h1>About</h1>
+  <header id="header">
+    <h1>About</h1>
+  </header>
   <nav id="navigation">
     <ul>
       <li><a href="../">Home</a></li>
@@ -16,6 +18,7 @@
     </ul>
   </nav>
   <article id="main">
+    <h2>Hank, the Wonder Dog</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
       labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
