Add pretend responsive-image code

--- a/about/index.html
+++ b/about/index.html
@@ -26,6 +26,16 @@
       voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
       non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
+    <figure class="photo portrait">
+      <img
+        sizes="(min-width: 620px) 42vw, 85vw"
+        srcset="hank-1000.jpg 1000w, hank-500.jpg 500w,
+        hank-250.jpg 250w"
+        src="../assets/img/hank-flowers-portrait-1500.jpg" />
+      <figcaption>
+        Hank looking super cute and ready for treats in front of the flowers.
+      </figcaption>
+    </figure>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
       labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
